--- a/news.html
+++ b/news.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>News Page</h1>
+<p>This is a paragraph for the news page.</p>
 
 </body>
 </html>
